test/typechecker.d/invalid/sub1.surc.bad
subr(b: Bool): IO = do
	var n <- 2
	if b
		n <- 1
	else
		n <- 0
	end

main(): IO = do
	subr 4
